objects/SLSI__SL_BannerWidget__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SLSI__Animation_Type__c</fullName>
        <inlineHelpText>fade or slide</inlineHelpText>
        <label>Animation Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Background_Color__c</fullName>
        <label>Background Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Banner_Sliding_Time__c</fullName>
        <label>Banner Sliding Time(Sec)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLSI__Font_Color__c</fullName>
        <label>Font Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Page_Region_Widget_Id__c</fullName>
        <label>Page Region Widget Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLSI__Widget_Height__c</fullName>
        <label>Widget Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SL BannerWidget</label>
</CustomObject>